Add individual checkbox and radio examples for docs embedding

--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -80,123 +80,11 @@
   <div class="col-6">
     <h3>.p-checkbox component</h3>
 
-    <div class="p-checkbox">
-      <div class="p-checkbox__input">
-        <input type="checkbox" id="checkExamplePattern">
-        <label for="checkExamplePattern">
-      </div>
-      <label class="p-checkbox__label" for="checkExamplePattern">.p-checkbox</label>
-    </div>
+    {% include 'docs/examples/patterns/forms/_checkbox.html' %}
 
-    <div class="p-checkbox">
-      <div class="p-checkbox__input">
-        <input type="checkbox" id="checkExamplePatternChecked" checked>
-        <label for="checkExamplePatternChecked">
-      </div>
-      <label class="p-checkbox__label" for="checkExamplePatternChecked">checked</label>
-    </div>
+    {% include 'docs/examples/patterns/forms/_checkbox-heading.html' %}
 
-    <div class="p-checkbox is-disabled">
-      <div class="p-checkbox__input">
-        <input type="checkbox" id="checkExamplePatternDisabled" disabled>
-        <label for="checkExamplePatternDisabled">
-      </div>
-      <label class="p-checkbox__label" for="checkExamplePatternDisabled">.is-disabled</label>
-    </div>
-
-    <div class="p-checkbox">
-      <div class="p-checkbox__input">
-        <input type="checkbox" id="checkExamplePatternRequired" required>
-        <label for="checkExamplePatternRequired">
-      </div>
-      <label class="p-checkbox__label is-required" for="checkExamplePatternRequired">required</label>
-    </div>
-
-    <h1>
-      <div class="p-checkbox--heading">
-        <div class="p-checkbox__input">
-          <input type="checkbox" id="checkExamplePatternH1">
-          <label for="checkExamplePatternH1">
-        </div>
-        <label class="p-checkbox__label" for="checkExamplePatternH1">.p-checkbox--heading</label>
-      </div>
-    </h1>
-
-    <h2>
-      <div class="p-checkbox--heading">
-        <div class="p-checkbox__input">
-          <input type="checkbox" id="checkExamplePatternH2">
-          <label for="checkExamplePatternH2">
-        </div>
-        <label class="p-checkbox__label" for="checkExamplePatternH2">.p-checkbox--heading</label>
-      </div>
-    </h2>
-
-    <h3>
-      <div class="p-checkbox--heading">
-        <div class="p-checkbox__input">
-          <input type="checkbox" id="checkExamplePatternH3">
-          <label for="checkExamplePatternH3">
-        </div>
-        <label class="p-checkbox__label" for="checkExamplePatternH3">.p-checkbox--heading</label>
-      </div>
-    </h3>
-
-    <h4>
-      <div class="p-checkbox--heading">
-        <div class="p-checkbox__input">
-          <input type="checkbox" id="checkExamplePatternH4">
-          <label for="checkExamplePatternH4">
-        </div>
-        <label class="p-checkbox__label" for="checkExamplePatternH4">.p-checkbox--heading</label>
-      </div>
-    </h4>
-
-    <p>
-      <span class="p-checkbox--inline">
-        <span class="p-checkbox__input">
-          <input type="checkbox" id="checkExamplePatternInline">
-          <label for="checkExamplePatternInline">
-        </span>
-        <label class="p-checkbox__label" for="checkExamplePatternInline">.p-checkbox--inline</label>
-      </span>
-      alonside some text
-    </p>
-
-    <table>
-      <thead>
-        <tr>
-          <th>
-            <span class="p-checkbox--inline">
-              <span class="p-checkbox__input">
-                <input type="checkbox" id="checkExamplePatternTable">
-                <label for="checkExamplePatternTable">
-              </span>
-              <label class="p-checkbox__label" for="checkExamplePatternTable">.p-checkbox--inline in TH</label>
-            </span>
-          </th>
-          <th>
-            Text in adjacent cell
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <span class="p-checkbox--inline">
-              <span class="p-checkbox__input">
-                <input type="checkbox" id="checkExamplePatternTableInline">
-                <label for="checkExamplePatternInline">
-              </span>
-              <label class="p-checkbox__label" for="checkExamplePatternTableInline">.p-checkbox--inline in td</label>
-            </span>
-          </td>
-          <td>
-            Text in adjacent cell
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    {% include 'docs/examples/patterns/forms/_checkbox-inline.html' %}
 
     <p class="p-muted-heading">
       <span class="p-checkbox--inline">
@@ -303,123 +191,11 @@
   <div class="col-6">
     <h3>.p-radio component</h3>
 
-    <div class="p-radio">
-      <div class="p-radio__input">
-        <input type="radio" id="radioExamplePattern" name="radioPattern">
-        <label for="radioExamplePattern">
-      </div>
-      <label class="p-radio__label" for="radioExamplePattern">.p-radio</label>
-    </div>
+    {% include 'docs/examples/patterns/forms/_radio.html' %}
 
-    <div class="p-radio">
-      <div class="p-radio__input">
-        <input type="radio" id="radioExamplePatternChecked" name="radioPattern" checked>
-        <label for="radioExamplePatternChecked">
-      </div>
-      <label class="p-radio__label" for="radioExamplePatternChecked">checked</label>
-    </div>
+    {% include 'docs/examples/patterns/forms/_radio-heading.html' %}
 
-    <div class="p-radio is-disabled">
-      <div class="p-radio__input">
-        <input type="radio" id="radioExamplePatternDisabled" name="radioPattern" disabled>
-        <label for="radioExamplePatternDisabled">
-      </div>
-      <label class="p-radio__label" for="radioExamplePatternDisabled">.is-disabled</label>
-    </div>
-
-    <div class="p-radio">
-      <div class="p-radio__input">
-        <input type="radio" id="radioExamplePatternRequired" name="radioPattern" required>
-        <label for="radioExamplePatternRequired">
-      </div>
-      <label class="p-radio__label is-required" for="radioExamplePatternRequired">required</label>
-    </div>
-
-    <h1>
-      <div class="p-radio--heading">
-        <div class="p-radio__input">
-          <input type="radio" id="radioExamplePatternH1" name="radioPattern">
-          <label for="radioExamplePatternH1">
-        </div>
-        <label class="p-radio__label" for="radioExamplePatternH1">.p-radio--heading</label>
-      </div>
-    </h1>
-
-    <h2>
-      <div class="p-radio--heading">
-        <div class="p-radio__input">
-          <input type="radio" id="radioExamplePatternH2" name="radioPattern">
-          <label for="radioExamplePatternH2">
-        </div>
-        <label class="p-radio__label" for="radioExamplePatternH2">.p-radio--heading</label>
-      </div>
-    </h2>
-
-    <h3>
-      <div class="p-radio--heading">
-        <div class="p-radio__input">
-          <input type="radio" id="radioExamplePatternH3" name="radioPattern">
-          <label for="radioExamplePatternH3">
-        </div>
-        <label class="p-radio__label" for="radioExamplePatternH3">.p-radio--heading</label>
-      </div>
-    </h3>
-
-    <h4>
-      <div class="p-radio--heading">
-        <div class="p-radio__input">
-          <input type="radio" id="radioExamplePatternH4" name="radioPattern">
-          <label for="radioExamplePatternH4">
-        </div>
-        <label class="p-radio__label" for="radioExamplePatternH4">.p-radio--heading</label>
-      </div>
-    </h4>
-
-    <p>
-      <span class="p-radio--inline">
-        <span class="p-radio__input">
-          <input type="radio" id="radioExamplePatternInline" name="radioPattern">
-          <label for="radioExamplePatternInline">
-        </span>
-        <label class="p-radio__label" for="radioExamplePatternInline">.p-radio--inline</label>
-      </span>
-      alonside some text
-    </p>
-
-    <table>
-      <thead>
-        <tr>
-          <th>
-            <span class="p-radio--inline">
-              <span class="p-radio__input">
-                <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-                <label for="radioExamplePatternTable">
-              </span>
-              <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in th</label>
-            </span>
-          </th>
-          <th>
-            Text in adjacent cell
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <span class="p-radio--inline">
-              <span class="p-radio__input">
-                <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-                <label for="radioExamplePatternTable">
-              </span>
-              <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in td</label>
-            </span>
-          </td>
-          <td>
-            Text in adjacent cell
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    {% include 'docs/examples/patterns/forms/_radio-inline.html' %}
 
     <p class="p-muted-heading">
       <span class="p-radio--inline">
