Close label elements

--- a/templates/docs/examples/patterns/forms/_checkbox-heading.html
+++ b/templates/docs/examples/patterns/forms/_checkbox-heading.html
@@ -2,7 +2,7 @@
   <div class="p-checkbox--heading">
     <div class="p-checkbox__input">
       <input type="checkbox" id="checkExamplePatternH1">
-      <label for="checkExamplePatternH1">
+      <label for="checkExamplePatternH1" />
     </div>
     <label class="p-checkbox__label" for="checkExamplePatternH1">.p-checkbox--heading</label>
   </div>
@@ -12,7 +12,7 @@
   <div class="p-checkbox--heading">
     <div class="p-checkbox__input">
       <input type="checkbox" id="checkExamplePatternH2">
-      <label for="checkExamplePatternH2">
+      <label for="checkExamplePatternH2" />
     </div>
     <label class="p-checkbox__label" for="checkExamplePatternH2">.p-checkbox--heading</label>
   </div>
@@ -22,7 +22,7 @@
   <div class="p-checkbox--heading">
     <div class="p-checkbox__input">
       <input type="checkbox" id="checkExamplePatternH3">
-      <label for="checkExamplePatternH3">
+      <label for="checkExamplePatternH3" />
     </div>
     <label class="p-checkbox__label" for="checkExamplePatternH3">.p-checkbox--heading</label>
   </div>
@@ -32,7 +32,7 @@
   <div class="p-checkbox--heading">
     <div class="p-checkbox__input">
       <input type="checkbox" id="checkExamplePatternH4">
-      <label for="checkExamplePatternH4">
+      <label for="checkExamplePatternH4" />
     </div>
     <label class="p-checkbox__label" for="checkExamplePatternH4">.p-checkbox--heading</label>
   </div>
