--- a/templates/docs/examples/patterns/forms/_checkbox-inline.html
+++ b/templates/docs/examples/patterns/forms/_checkbox-inline.html
@@ -2,7 +2,7 @@
   <span class="p-checkbox--inline">
     <span class="p-checkbox__input">
       <input type="checkbox" id="checkExamplePatternInline">
-      <label for="checkExamplePatternInline">
+      <label for="checkExamplePatternInline" />
     </span>
     <label class="p-checkbox__label" for="checkExamplePatternInline">.p-checkbox--inline</label>
   </span>
@@ -16,7 +16,7 @@
         <span class="p-checkbox--inline">
           <span class="p-checkbox__input">
             <input type="checkbox" id="checkExamplePatternTable">
-            <label for="checkExamplePatternTable">
+            <label for="checkExamplePatternTable" />
           </span>
           <label class="p-checkbox__label" for="checkExamplePatternTable">.p-checkbox--inline in TH</label>
         </span>
@@ -32,7 +32,7 @@
         <span class="p-checkbox--inline">
           <span class="p-checkbox__input">
             <input type="checkbox" id="checkExamplePatternTableInline">
-            <label for="checkExamplePatternInline">
+            <label for="checkExamplePatternInline" />
           </span>
           <label class="p-checkbox__label" for="checkExamplePatternTableInline">.p-checkbox--inline in td</label>
         </span>
