--- a/templates/docs/examples/patterns/forms/_checkbox.html
+++ b/templates/docs/examples/patterns/forms/_checkbox.html
@@ -1,7 +1,7 @@
 <div class="p-checkbox">
   <div class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePattern">
-    <label for="checkExamplePattern">
+    <label for="checkExamplePattern" />
   </div>
   <label class="p-checkbox__label" for="checkExamplePattern">.p-checkbox</label>
 </div>
@@ -9,7 +9,7 @@
 <div class="p-checkbox">
   <div class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternChecked" checked>
-    <label for="checkExamplePatternChecked">
+    <label for="checkExamplePatternChecked" />
   </div>
   <label class="p-checkbox__label" for="checkExamplePatternChecked">checked</label>
 </div>
@@ -17,7 +17,7 @@
 <div class="p-checkbox is-disabled">
   <div class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternDisabled" disabled>
-    <label for="checkExamplePatternDisabled">
+    <label for="checkExamplePatternDisabled" />
   </div>
   <label class="p-checkbox__label" for="checkExamplePatternDisabled">.is-disabled</label>
 </div>
@@ -25,7 +25,7 @@
 <div class="p-checkbox">
   <div class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternRequired" required>
-    <label for="checkExamplePatternRequired">
+    <label for="checkExamplePatternRequired" />
   </div>
   <label class="p-checkbox__label is-required" for="checkExamplePatternRequired">required</label>
 </div>
