--- a/templates/docs/examples/patterns/forms/_radio-heading.html
+++ b/templates/docs/examples/patterns/forms/_radio-heading.html
@@ -2,7 +2,7 @@
   <div class="p-radio--heading">
     <div class="p-radio__input">
       <input type="radio" id="radioExamplePatternH1" name="radioPattern">
-      <label for="radioExamplePatternH1">
+      <label for="radioExamplePatternH1" />
     </div>
     <label class="p-radio__label" for="radioExamplePatternH1">.p-radio--heading</label>
   </div>
@@ -12,7 +12,7 @@
   <div class="p-radio--heading">
     <div class="p-radio__input">
       <input type="radio" id="radioExamplePatternH2" name="radioPattern">
-      <label for="radioExamplePatternH2">
+      <label for="radioExamplePatternH2" />
     </div>
     <label class="p-radio__label" for="radioExamplePatternH2">.p-radio--heading</label>
   </div>
@@ -22,7 +22,7 @@
   <div class="p-radio--heading">
     <div class="p-radio__input">
       <input type="radio" id="radioExamplePatternH3" name="radioPattern">
-      <label for="radioExamplePatternH3">
+      <label for="radioExamplePatternH3" />
     </div>
     <label class="p-radio__label" for="radioExamplePatternH3">.p-radio--heading</label>
   </div>
@@ -32,7 +32,7 @@
   <div class="p-radio--heading">
     <div class="p-radio__input">
       <input type="radio" id="radioExamplePatternH4" name="radioPattern">
-      <label for="radioExamplePatternH4">
+      <label for="radioExamplePatternH4" />
     </div>
     <label class="p-radio__label" for="radioExamplePatternH4">.p-radio--heading</label>
   </div>
