--- a/templates/docs/examples/patterns/forms/_radio-inline.html
+++ b/templates/docs/examples/patterns/forms/_radio-inline.html
@@ -2,7 +2,7 @@
   <span class="p-radio--inline">
     <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternInline" name="radioPattern">
-      <label for="radioExamplePatternInline">
+      <label for="radioExamplePatternInline" />
     </span>
     <label class="p-radio__label" for="radioExamplePatternInline">.p-radio--inline</label>
   </span>
@@ -16,7 +16,7 @@
         <span class="p-radio--inline">
           <span class="p-radio__input">
             <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-            <label for="radioExamplePatternTable">
+            <label for="radioExamplePatternTable" />
           </span>
           <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in th</label>
         </span>
@@ -32,7 +32,7 @@
         <span class="p-radio--inline">
           <span class="p-radio__input">
             <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-            <label for="radioExamplePatternTable">
+            <label for="radioExamplePatternTable" />
           </span>
           <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in td</label>
         </span>
