--- a/templates/docs/examples/patterns/forms/_radio.html
+++ b/templates/docs/examples/patterns/forms/_radio.html
@@ -1,7 +1,7 @@
 <div class="p-radio">
   <div class="p-radio__input">
     <input type="radio" id="radioExamplePattern" name="radioPattern">
-    <label for="radioExamplePattern">
+    <label for="radioExamplePattern" />
   </div>
   <label class="p-radio__label" for="radioExamplePattern">.p-radio</label>
 </div>
@@ -9,7 +9,7 @@
 <div class="p-radio">
   <div class="p-radio__input">
     <input type="radio" id="radioExamplePatternChecked" name="radioPattern" checked>
-    <label for="radioExamplePatternChecked">
+    <label for="radioExamplePatternChecked" />
   </div>
   <label class="p-radio__label" for="radioExamplePatternChecked">checked</label>
 </div>
@@ -17,7 +17,7 @@
 <div class="p-radio is-disabled">
   <div class="p-radio__input">
     <input type="radio" id="radioExamplePatternDisabled" name="radioPattern" disabled>
-    <label for="radioExamplePatternDisabled">
+    <label for="radioExamplePatternDisabled" />
   </div>
   <label class="p-radio__label" for="radioExamplePatternDisabled">.is-disabled</label>
 </div>
@@ -25,7 +25,7 @@
 <div class="p-radio">
   <div class="p-radio__input">
     <input type="radio" id="radioExamplePatternRequired" name="radioPattern" required>
-    <label for="radioExamplePatternRequired">
+    <label for="radioExamplePatternRequired" />
   </div>
   <label class="p-radio__label is-required" for="radioExamplePatternRequired">required</label>
 </div>
