--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -90,7 +90,7 @@
       <span class="p-checkbox--inline">
         <span class="p-checkbox__input">
           <input type="checkbox" id="checkExamplePatternMutedHeading">
-          <label for="checkExamplePatternMutedHeading">
+          <label for="checkExamplePatternMutedHeading" />
         </span>
         <label class="p-checkbox__label" for="checkExamplePatternMutedHeading">.p-checkbox--inline in .p-muted-heading</label>
       </span>
@@ -101,7 +101,7 @@
         <span class="p-checkbox--inline">
           <span class="p-checkbox__input">
             <input type="checkbox" id="checkExamplePatternMutedInlineHeading">
-            <label for="checkExamplePatternMutedInlineHeading">
+            <label for="checkExamplePatternMutedInlineHeading" />
           </span>
           <label class="p-checkbox__label" for="checkExamplePatternMutedInlineHeading">.p-checkbox--inline in .p-muted-heading</label>
         </span>
@@ -201,7 +201,7 @@
       <span class="p-radio--inline">
         <span class="p-radio__input">
           <input type="radio" id="radioExamplePatternMutedHeading" name="radioPattern">
-          <label for="radioExamplePatternMutedHeading">
+          <label for="radioExamplePatternMutedHeading" />
         </span>
         <label class="p-radio__label" for="radioExamplePatternMutedHeading">.p-radio--inline in .p-muted-heading</label>
       </span>
@@ -212,7 +212,7 @@
         <span class="p-radio--inline">
           <span class="p-radio__input">
             <input type="radio" id="radioExamplePatternMutedInlineHeading" name="radioPattern">
-            <label for="radioExamplePatternMutedInlineHeading">
+            <label for="radioExamplePatternMutedInlineHeading" />
           </span>
           <label class="p-radio__label" for="radioExamplePatternMutedInlineHeading">.p-radio--inline in .p-muted-heading</label>
         </span>
