Update old comparison example to use new components

--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -10,10 +10,20 @@
     <div class="row">
       <div class="col-3">
         <form action="">
-          <input type="checkbox" id="checkExample2">
-          <label for="checkExample2">Checkbox option 2</label>
-          <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
-          <label for="Radio1">Radio option 1</label>
+          <div class="p-checkbox">
+            <div class="p-checkbox__input">
+              <input type="checkbox" id="checkExample2a">
+              <label for="checkExample2a" />
+            </div>
+            <label class="p-checkbox__label" for="checkExample2a">Checkbox option 2</label>
+          </div>
+          <div class="p-radio">
+            <div class="p-radio__input">
+              <input type="radio" name="RadioOptions" id="Radio1a" value="option1" checked>
+              <label for="Radio1a" />
+            </div>
+            <label class="p-radio__label" for="Radio1a">Radio option 1</label>
+          </div>
         </form>
       </div>
       <div class="col-3">
@@ -32,8 +42,13 @@
       <div class="col-3">
         <form action="">
           <input type="text">
-          <input type="checkbox" id="checkExample1" checked>
-          <label for="checkExample1">Checkbox option 1</label>
+          <div class="p-checkbox">
+            <div class="p-checkbox__input">
+              <input type="checkbox" id="checkExample1" checked>
+              <label for="checkExample1" />
+            </div>
+            <label class="p-checkbox__label" for="checkExample1">Checkbox option 1</label>
+          </div>
         </form>
       </div>
       <div class="col-3">
@@ -43,22 +58,57 @@
         </form>
       </div>
       <div class="col-3">
-        <input type="checkbox" id="checkExample2">
-        <label for="checkExample2">Checkbox option 2</label>
-        <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
-        <label for="Radio1">Radio option 1</label>
-        <input type="radio" name="RadioOptions" id="Radio2" value="option2">
-        <label for="Radio2">Radio option 2</label>
+        <div class="p-checkbox">
+          <div class="p-checkbox__input">
+            <input type="checkbox" id="checkExample2">
+            <label for="checkExample2" />
+          </div>
+          <label class="p-checkbox__label" for="checkExample2">Checkbox option 2</label>
+        </div>
+        <div class="p-radio">
+          <div class="p-radio__input">
+            <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
+            <label for="Radio1" />
+          </div>
+          <label class="p-radio__label" for="Radio1">Radio option 1</label>
+        </div>
+        <div class="p-radio">
+          <div class="p-radio__input">
+            <input type="radio" name="RadioOptions" id="Radio2" value="option1">
+            <label for="Radio2" />
+          </div>
+          <label class="p-radio__label" for="Radio2">Radio option 2</label>
+        </div>
       </div>
       <div class="col-3">
-        <input type="radio" name="RadioOptions" id="Radio3" value="option3" >
-        <label for="Radio3">Radio option 3</label>
-        <input type="radio" name="RadioOptions" id="Radio4" value="option4">
-        <label for="Radio4">Radio option 4</label>
-        <input type="checkbox" id="checkExample3" checked>
-        <label for="checkExample3">Checkbox option 3</label>
-        <input type="checkbox" id="checkExample4">
-        <label for="checkExample4">Checkbox option 4</label>
+        <div class="p-radio">
+          <div class="p-radio__input">
+            <input type="radio" name="RadioOptions" id="Radio3" value="option1" checked>
+            <label for="Radio3" />
+          </div>
+          <label class="p-radio__label" for="Radio3">Radio option 3</label>
+        </div>
+        <div class="p-radio">
+          <div class="p-radio__input">
+            <input type="radio" name="RadioOptions" id="Radio4" value="option1">
+            <label for="Radio4" />
+          </div>
+          <label class="p-radio__label" for="Radio4">Radio option 4</label>
+        </div>
+        <div class="p-checkbox">
+          <div class="p-checkbox__input">
+            <input type="checkbox" id="checkExample3" checked>
+            <label for="checkExample3" />
+          </div>
+          <label class="p-checkbox__label" for="checkExample3">Checkbox option 3</label>
+        </div>
+        <div class="p-checkbox">
+          <div class="p-checkbox__input">
+            <input type="checkbox" id="checkExample4">
+            <label for="checkExample4" />
+          </div>
+          <label class="p-checkbox__label" for="checkExample4">Checkbox option 4</label>
+        </div>
       </div>
     </div>
   </div>
@@ -77,8 +127,13 @@
         <tr>
           <th>
             <form>
-              <input type="checkbox" id="checkExample5" checked="">
-              <label for="checkExample5" class="is-inline-label">label</label>
+              <div class="p-checkbox--inline">
+                <div class="p-checkbox__input">
+                  <input type="checkbox" id="checkExample5" checked>
+                  <label for="checkExample5" />
+                </div>
+                <label class="p-checkbox__label" for="checkExample5">label</label>
+              </div>
             </form>
           </th>
           <th>Power</th>
@@ -94,8 +149,13 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="checkbox" id="checkExample6" checked="">
-              <label for="checkExample6" class="is-inline-label">label</label>
+              <div class="p-checkbox--inline">
+                <div class="p-checkbox__input">
+                  <input type="checkbox" id="checkExample6" checked>
+                  <label for="checkExample6" />
+                </div>
+                <label class="p-checkbox__label" for="checkExample6">label</label>
+              </div>
             </form>
           </th>
           <td aria-label="Power">Off</td>
@@ -109,8 +169,13 @@
         <tr>
           <th aria-label="FQDN | MAC">
             <form>
-              <input type="radio" name="RadioOptions" id="Radio5" value="option1" checked>
-              <label for="Radio5" class="is-inline-label">label</label>
+              <div class="p-radio--inline">
+                <div class="p-radio__input">
+                  <input type="radio" name="RadioOptions" id="Radio5" value="option1">
+                  <label for="Radio5" />
+                </div>
+                <label class="p-radio__label" for="Radio5">label</label>
+              </div>
             </form>
           </th>
           <td aria-label="Power">Off</td>
