Rename form example page to "Form elements"

--- a/templates/docs/examples/templates/form-elements.html
+++ b/templates/docs/examples/templates/form-elements.html
@@ -1,5 +1,5 @@
 {% extends "_layouts/examples.html" %}
-{% block title %}Forms / Tick elements{% endblock %}
+{% block title %}Form elements{% endblock %}
 
 {% block content %}
 
