Mark hardcoded demo example styling for future refactoring

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -136,6 +136,8 @@
   @include vf-l-application-panels;
 
   // minimal demo styling
+  // FIXME: this should be removed from framework SCSS
+  // (see https://github.com/canonical-web-and-design/vanilla-framework/issues/3199)
   .l-application.app-demo {
     & > .l-navigation-bar,
     & > .l-navigation .l-navigation__drawer,
