--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -45,6 +45,8 @@
     }
   }
 
+  // FIXME: this should be removed from framework SCSS
+  // (see https://github.com/canonical-web-and-design/vanilla-framework/issues/3199)
   .grid-demo [class*='#{$grid-column-prefix}'] {
     background: transparentize($color-negative, 0.9);
     margin-bottom: $spv-outer--small;
