Add a note about improved spacing to the ticks comparison example

--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -80,6 +80,8 @@
   <div class="col-6">
     <h3>.p-checkbox component</h3>
 
+    <p><em>The <code>p-checkbox</code> markup improves spacing between consecutive checkboxes.</em></p>
+
     {% include 'docs/examples/patterns/forms/_checkbox.html' %}
 
     {% include 'docs/examples/patterns/forms/_checkbox-heading.html' %}
@@ -190,6 +192,8 @@
 
   <div class="col-6">
     <h3>.p-radio component</h3>
+
+    <p><em>The <code>p-radio</code> markup improves spacing between consecutive radio buttons.</em></p>
 
     {% include 'docs/examples/patterns/forms/_radio.html' %}
 
