Fix validation errors

--- a/templates/docs/examples/patterns/forms/_checkbox.html
+++ b/templates/docs/examples/patterns/forms/_checkbox.html
@@ -1,31 +1,31 @@
-<div class="p-checkbox">
-  <div class="p-checkbox__input">
+<span class="p-checkbox">
+  <span class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePattern">
-    <label for="checkExamplePattern" />
-  </div>
+    <label for="checkExamplePattern"></label>
+  </span>
   <label class="p-checkbox__label" for="checkExamplePattern">.p-checkbox</label>
-</div>
+</span>
 
-<div class="p-checkbox">
-  <div class="p-checkbox__input">
+<span class="p-checkbox">
+  <span class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternChecked" checked>
-    <label for="checkExamplePatternChecked" />
-  </div>
+    <label for="checkExamplePatternChecked"></label>
+  </span>
   <label class="p-checkbox__label" for="checkExamplePatternChecked">checked</label>
-</div>
+</span>
 
-<div class="p-checkbox is-disabled">
-  <div class="p-checkbox__input">
+<span class="p-checkbox is-disabled">
+  <span class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternDisabled" disabled>
-    <label for="checkExamplePatternDisabled" />
-  </div>
+    <label for="checkExamplePatternDisabled"></label>
+  </span>
   <label class="p-checkbox__label" for="checkExamplePatternDisabled">.is-disabled</label>
-</div>
+</span>
 
-<div class="p-checkbox">
-  <div class="p-checkbox__input">
+<span class="p-checkbox">
+  <span class="p-checkbox__input">
     <input type="checkbox" id="checkExamplePatternRequired" required>
-    <label for="checkExamplePatternRequired" />
-  </div>
+    <label for="checkExamplePatternRequired"></label>
+  </span>
   <label class="p-checkbox__label is-required" for="checkExamplePatternRequired">required</label>
-</div>
+</span>
