--- a/templates/docs/examples/patterns/forms/_radio-heading.html
+++ b/templates/docs/examples/patterns/forms/_radio-heading.html
@@ -1,39 +1,39 @@
 <h1>
-  <div class="p-radio--heading">
-    <div class="p-radio__input">
+  <span class="p-radio--heading">
+    <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternH1" name="radioPattern">
-      <label for="radioExamplePatternH1" />
-    </div>
+      <label for="radioExamplePatternH1"></label>
+    </span>
     <label class="p-radio__label" for="radioExamplePatternH1">.p-radio--heading</label>
-  </div>
+  </span>
 </h1>
 
 <h2>
-  <div class="p-radio--heading">
-    <div class="p-radio__input">
+  <span class="p-radio--heading">
+    <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternH2" name="radioPattern">
-      <label for="radioExamplePatternH2" />
-    </div>
+      <label for="radioExamplePatternH2"></label>
+    </span>
     <label class="p-radio__label" for="radioExamplePatternH2">.p-radio--heading</label>
-  </div>
+  </span>
 </h2>
 
 <h3>
-  <div class="p-radio--heading">
-    <div class="p-radio__input">
+  <span class="p-radio--heading">
+    <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternH3" name="radioPattern">
-      <label for="radioExamplePatternH3" />
-    </div>
+      <label for="radioExamplePatternH3"></label>
+    </span>
     <label class="p-radio__label" for="radioExamplePatternH3">.p-radio--heading</label>
-  </div>
+  </span>
 </h3>
 
 <h4>
-  <div class="p-radio--heading">
-    <div class="p-radio__input">
+  <span class="p-radio--heading">
+    <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternH4" name="radioPattern">
-      <label for="radioExamplePatternH4" />
-    </div>
+      <label for="radioExamplePatternH4"></label>
+    </span>
     <label class="p-radio__label" for="radioExamplePatternH4">.p-radio--heading</label>
-  </div>
+  </span>
 </h4>
