--- a/templates/docs/examples/patterns/forms/_radio-inline.html
+++ b/templates/docs/examples/patterns/forms/_radio-inline.html
@@ -2,7 +2,7 @@
   <span class="p-radio--inline">
     <span class="p-radio__input">
       <input type="radio" id="radioExamplePatternInline" name="radioPattern">
-      <label for="radioExamplePatternInline" />
+      <label for="radioExamplePatternInline"></label>
     </span>
     <label class="p-radio__label" for="radioExamplePatternInline">.p-radio--inline</label>
   </span>
@@ -16,7 +16,7 @@
         <span class="p-radio--inline">
           <span class="p-radio__input">
             <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-            <label for="radioExamplePatternTable" />
+            <label for="radioExamplePatternTable"></label>
           </span>
           <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in th</label>
         </span>
@@ -31,10 +31,10 @@
       <td>
         <span class="p-radio--inline">
           <span class="p-radio__input">
-            <input type="radio" id="radioExamplePatternTable" name="radioPattern">
-            <label for="radioExamplePatternTable" />
+            <input type="radio" id="radioExamplePatternTableCell" name="radioPattern">
+            <label for="radioExamplePatternTableCell"></label>
           </span>
-          <label class="p-radio__label" for="radioExamplePatternTable">.p-radio--inline in td</label>
+          <label class="p-radio__label" for="radioExamplePatternTableCell">.p-radio--inline in td</label>
         </span>
       </td>
       <td>
