--- a/templates/docs/examples/patterns/forms/_radio.html
+++ b/templates/docs/examples/patterns/forms/_radio.html
@@ -1,31 +1,31 @@
-<div class="p-radio">
-  <div class="p-radio__input">
+<span class="p-radio">
+  <span class="p-radio__input">
     <input type="radio" id="radioExamplePattern" name="radioPattern">
-    <label for="radioExamplePattern" />
-  </div>
+    <label for="radioExamplePattern"></label>
+  </span>
   <label class="p-radio__label" for="radioExamplePattern">.p-radio</label>
-</div>
+</span>
 
-<div class="p-radio">
-  <div class="p-radio__input">
+<span class="p-radio">
+  <span class="p-radio__input">
     <input type="radio" id="radioExamplePatternChecked" name="radioPattern" checked>
-    <label for="radioExamplePatternChecked" />
-  </div>
+    <label for="radioExamplePatternChecked"></label>
+  </span>
   <label class="p-radio__label" for="radioExamplePatternChecked">checked</label>
-</div>
+</span>
 
-<div class="p-radio is-disabled">
-  <div class="p-radio__input">
+<span class="p-radio is-disabled">
+  <span class="p-radio__input">
     <input type="radio" id="radioExamplePatternDisabled" name="radioPattern" disabled>
-    <label for="radioExamplePatternDisabled" />
-  </div>
+    <label for="radioExamplePatternDisabled"></label>
+  </span>
   <label class="p-radio__label" for="radioExamplePatternDisabled">.is-disabled</label>
-</div>
+</span>
 
-<div class="p-radio">
-  <div class="p-radio__input">
+<span class="p-radio">
+  <span class="p-radio__input">
     <input type="radio" id="radioExamplePatternRequired" name="radioPattern" required>
-    <label for="radioExamplePatternRequired" />
-  </div>
+    <label for="radioExamplePatternRequired"></label>
+  </span>
   <label class="p-radio__label is-required" for="radioExamplePatternRequired">required</label>
-</div>
+</span>
