--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -92,7 +92,7 @@
       <span class="p-checkbox--inline">
         <span class="p-checkbox__input">
           <input type="checkbox" id="checkExamplePatternMutedHeading">
-          <label for="checkExamplePatternMutedHeading" />
+          <label for="checkExamplePatternMutedHeading"></label>
         </span>
         <label class="p-checkbox__label" for="checkExamplePatternMutedHeading">.p-checkbox--inline in .p-muted-heading</label>
       </span>
@@ -103,7 +103,7 @@
         <span class="p-checkbox--inline">
           <span class="p-checkbox__input">
             <input type="checkbox" id="checkExamplePatternMutedInlineHeading">
-            <label for="checkExamplePatternMutedInlineHeading" />
+            <label for="checkExamplePatternMutedInlineHeading"></label>
           </span>
           <label class="p-checkbox__label" for="checkExamplePatternMutedInlineHeading">.p-checkbox--inline in .p-muted-heading</label>
         </span>
@@ -167,8 +167,8 @@
       <tbody>
         <tr>
           <td>
-            <input type="checkbox" id="checkExampleBaseTableCell">
-            <label class="is-inline-label" for="checkExampleBaseTableCell">.is-inline-label</label>
+            <input type="radio" id="radioExampleBaseTableCell" name="radioBase">
+            <label class="is-inline-label" for="radioExampleBaseTableCell">.is-inline-label</label>
           </td>
           <td>
             Text in adjacent cell
@@ -205,7 +205,7 @@
       <span class="p-radio--inline">
         <span class="p-radio__input">
           <input type="radio" id="radioExamplePatternMutedHeading" name="radioPattern">
-          <label for="radioExamplePatternMutedHeading" />
+          <label for="radioExamplePatternMutedHeading"></label>
         </span>
         <label class="p-radio__label" for="radioExamplePatternMutedHeading">.p-radio--inline in .p-muted-heading</label>
       </span>
@@ -216,7 +216,7 @@
         <span class="p-radio--inline">
           <span class="p-radio__input">
             <input type="radio" id="radioExamplePatternMutedInlineHeading" name="radioPattern">
-            <label for="radioExamplePatternMutedInlineHeading" />
+            <label for="radioExamplePatternMutedInlineHeading"></label>
           </span>
           <label class="p-radio__label" for="radioExamplePatternMutedInlineHeading">.p-radio--inline in .p-muted-heading</label>
         </span>
