--- a/scss/_base_tables.scss
+++ b/scss/_base_tables.scss
@@ -45,7 +45,7 @@
     }
 
     tr {
-      border-bottom: 1px solid $color-dark;
+      border-bottom: 1px solid $colors--light-theme--border-default;
       vertical-align: top;
     }
   }
@@ -65,6 +65,6 @@
   }
 
   %table-row-border {
-    border-top: 1px solid $color-mid-light;
+    border-top: 1px solid $colors--light-theme--border-low-contrast;
   }
 }
