increase font weight of selected item

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -320,6 +320,8 @@ $lightness-threshold: 70;
   %navigation-link-selected {
     @extend %navigation-link-hover;
 
+    font-weight: $font-weight-bold;
+
     &::before {
       background-color: $color-navigation-text;
       content: '';
