--- a/templates/docs/examples/patterns/forms/tick-comparison.html
+++ b/templates/docs/examples/patterns/forms/tick-comparison.html
@@ -5,15 +5,26 @@
 
 {% block content %}
 <form>
+
 <div class="row">
   <div class="col-6">
+    <label class="p-checkbox">
+      <input class="p-checkbox__input" type="checkbox" id="checkTest1">
+      <span class="p-checkbox__label" for="checkTest1">Checkbox</span>
+    </label>
+
+    <label class="p-radio">
+      <input class="p-radio__input" type="radio" id="radioTesta1" name="radioTesta1">
+      <span class="p-radio__label" for="radioTesta1">Radioest</span>
+    </label>
+
     <h3>Base checkbox</h3>
 
     <input type="checkbox" id="checkExampleBase">
     <label for="checkExampleBase">checkbox</label>
 
     <input type="checkbox" id="checkExampleBaseChecked" checked>
-    <label for="checkExampleBaseChecked">checked</label>
+    <label for="checkExampleBaseChecked">checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked checked </label>
 
     <input type="checkbox" id="checkExampleBaseDisabled" disabled>
     <label for="checkExampleBaseDisabled">disabled</label>
