fix border color

--- a/scss/_base_forms-tick-elements.scss
+++ b/scss/_base_forms-tick-elements.scss
@@ -119,11 +119,10 @@ $form-radio-circle-offset: 0.5 * ($form-tick-box-size - $form-radio-inner-circle
     $properties: #{background-color, border-color};
     @include vf-animation($properties);
 
-    border-color: $color-x-light;
     bottom: calc(#{0.5 * ($form-tick-box-size - $form-radio-inner-circle-diameter)} + 2px);
     bottom: $form-tick-box-size - $form-tick-height - $form-tick-offset-top;
-    border-bottom: 2px solid;
-    border-left: 2px solid;
+    border-bottom: 2px solid $color-x-light;
+    border-left: 2px solid $color-x-light;
     content: '';
     display: block;
     flex: 0 0 auto;
